--- a/res/layout/activity_sound_player.xml
+++ b/res/layout/activity_sound_player.xml
@@ -13,7 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:scaleType="centerInside"
-        android:src="@drawable/pham" />
+        android:scaleType="centerInside" />
 
 </RelativeLayout>
